# vibe-kanban-local

./: AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml
crates/api-types/: Cargo.toml
crates/api-types/src/: auth.rs  issue.rs  issue_relationship.rs  lib.rs  notification.rs  organization_member.rs  organizations.rs  pull_request.rs  user.rs  workspace.rs  workspace_issue_link.rs
crates/db/: Cargo.toml
crates/db/.sqlx/: query-026c5b84d4192774c9d4d641a01f2fcff9ca4479e2d9884c58afff9be83ccd1c.json  query-0323e3b378f1c3c3922259d60e7191b813614b2317e1cda0bf7e2e472a56b056.json  query-04803d65405a3e71994655075d121d176dbf8ef2c24ad29dbc3fba528af0eceb.json  query-093e64edf5138ef65226e9da6c1a08618ba38b1263f271e767bb917e8577ef2c.json  query-098ff09dde75396672a3d220124d06d9aae14037f92bee1a70b0cd93c32c1b85.json  query-0a08b15a3a5e3674d04204fd969f11466db5ad32198ad250fdcd76c2976e3c60.json  query-0a2eaef4123ab2a96e4ee99ba3dafa6e685e8e1c418684a70212e6a82227258b.json  query-0ab8e2f5bcfcceb690ed088dc16d82b88aadeddf6da0f22b9ec841e3800f7276.json  query-0bf42e7fa8b92a0a1084884f6715b201a2504fdab830d0ee7ccd77afe96811ff.json  query-10a42eee5dcaae0395bcbef770328185590f3268bbe6b5dd064d2f4493f6e534.json  query-11f56b0511f3c604c6e8b9607348806b80834489ada21071853db7746574c24d.json  query-13a5c8fad93c44670d15f849ba527cdd933d5bf2fb8891854bee8add169e99b1.json  query-14e72fca6ff785241ab0aaefa1651b7274cc2975828aa08fd9b98fdbb1099f1b.json  query-15ede68549a8106e490978753e4f596c9488629e7a5b3053d8066448c54301dd.json  query-15f3702f304d717e5b5a55eb4279db5abaf00ca8d9793d990055f83d2722eddd.json  query-18e0b60fbea5ce8e0849379415dc6b92860828280946f6ee2a1d6bd8b9d0dd02.json  query-1c4f2e83d99525dfe83f2027e930f0c2d5794be2f5a1556f24eeacb49536444c.json  query-1de399973ce07963b9968a386b3215e5124bbbcd73792d8c9f5f49372cb4fb82.json  query-209f1b560de8e99de312394860b42251b0272fc7f8f57ea50c9a16fb026b5ae4.json  query-259241222e5586bcdbf239017fa27cb4d0889acd917ed1e9448273c90de99e62.json  query-285d0e55bf97c8e07d9cad554ac70b2fcdfb8558b6842b16f0f5f60c019b89b6.json  query-286e3f275136025f637cab1a71267275324cd3e5f6e8bf2996b1221574b4a958.json  query-28c5663553b8db42c4a77b343862efa8855622650fe80733c19ea15f3c55cfbc.json  query-2967577696798c7a9aab35ba721d85cd00071951aafb5ff017e9aea1c59b9f92.json  query-2cd096d9a75ffdfce5b6f5b38d3876a7f09dafee6f5e07d00c37532d7fd3bdd8.json  (+101 more)
crates/db/src/: identity_seeder.rs  lib.rs
crates/deployment/: Cargo.toml
(+181 files in other folders)
