[package]
name = "db"
version.workspace = true
edition = "2024"

[dependencies]
api-types = { path = "../api-types" }
utils = { path = "../utils" }
executors = { path = "../executors" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls-aws-lc-rs", "sqlite", "sqlite-preupdate-hook", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "v5", "serde"] }
ts-rs = { workspace = true }
serde_with = { workspace = true }
strum = "0.27.2"
strum_macros = "0.27.2"
futures = "0.3.32"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
