[package]
name = "deployment"
version = "0.1.44"
edition = "2024"

[dependencies]
db = { path = "../db" }
utils = { path = "../utils" }
git = { path = "../git" }
services = { path = "../services" }
worktree-manager = { path = "../worktree-manager" }
executors = { path = "../executors" }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
trusted-key-auth = { path = "../trusted-key-auth" }
client-info = { path = "../client-info" }
preview-proxy = { path = "../preview-proxy" }
tokio = { workspace = true }
sqlx = "0.8.6"
futures = "0.3.31"
axum = { workspace = true }
tokio-util = { version = "0.7" }
